Time: 1 ms (53.21%), Space: 42.8 MB (17.98%) - LeetHub